--- a/main.css
+++ b/main.css
@@ -7,18 +7,22 @@ header {
   text-align: center;
 
 }
+.col-md-12 {
+  text-align: center;
+}
 h1 {
   color: grey;
   margin: auto;
   display: inline-block;
   font-family: 'Barrio';
   font-size: 100px;
+
 }
 .container {
   margin: auto;
-  width: 1000px;
+  width: 500px;
   height: 300;
-  text-align: center;
+
 
 }
 .hidden {
